# DTR

./: .gitignore  LICENSE  README.md  analyze_token_stats.py  approx_percent_tokens.py  eval_config.yaml  evaluate.py  pyproject.toml  train.py  train_config.yaml
core/: base_model.py  pruning_base.py  revival_base.py  timm_rtk.py  token_manager.py  utils.py
dynamicvit/: README.md  engine.py  evaluate.sh  finetune.sh  infer.py  main.py  utils.py  viz_example.ipynb
dynamicvit/models/: dyvit.py
dynamicvit/tools/: compute_flops.py
evit/: README.md  engine.py  evaluate.sh  evit.py  finetune.sh  helpers.py  main.py  visualize_mask.ipynb
models/: __init__.py  deit.py  deit_dyvit.py  rkt.py  rkt_old.py  vit.py
mydatasets/: __init__.py  cifar100_dataset.py  imagenet1k_dataset.py  tinyimagenet_dataset.py
pruning/: heuristic_pruner.py
revival/: affinity_revivor.py
tools/: pruning_scheds.py  token_stats.ipynb  token_visualization.ipynb
